# pitao

./: EXEMPLOS.md  FAQ.md  GUIA-MIGRACAO.md  README.md  REFERENCIA-API.md  ROADMAP.md  pyproject.toml  test_parser.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_phase8.py
.github/workflows/: lint.yml  publish.yml  tests.yml
pitao/: cli.py  parser.py  pt2py.py  py2pt.py
testcases/: FASTAPI_AUDIT.md  classes.pt  controle_fluxo.pt  fastapi_app.pt  ola_mundo.pt
tests/: audit_fastapi_roundtrip.py  test_fastapi_translation.py  test_parser.py
vscode-pitao/: README.md  language-configuration.json  package.json
vscode-pitao/syntaxes/: pitao.tmLanguage.json
