[project]
name = "pitao"
dynamic = ["version"]
description = "Python com palavras reservadas em Português"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Ivan Neto" }
]
keywords = ["python", "portuguese", "preprocessor", "education", "brasil"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Portuguese (Brazilian)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Pre-processors",
    "Topic :: Education",
]

[project.urls]
Homepage = "https://github.com/ivancrneto/pitao"
Repository = "https://github.com/ivancrneto/pitao"

[project.scripts]
pitao = "pitao.cli:main"
pt2py = "pitao.pt2py:main"
py2pt = "pitao.py2pt:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pitao"]

[tool.hatch.version]
source = "vcs"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
    "pytest>=8.0",
]
# FastAPI integration test deps. Kept out of the default `dev` group because
# modern FastAPI requires Python >= 3.10, while the CI matrix also covers
# 3.8/3.9. Install explicitly with `uv sync --group fastapi` on a supported
# interpreter (see the `fastapi-integration` job in .github/workflows/tests.yml).
# httpx is required by FastAPI's TestClient.
fastapi = [
    "fastapi>=0.110",
    "httpx>=0.27",
]
